--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,17 @@
-name: Test Community Edition
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [main, develop]
+    branches: [ main, develop ]
   pull_request:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11", "3.12"]
+        python-version: ['3.10', '3.11', '3.12']
     
     steps:
     - uses: actions/checkout@v3
@@ -21,28 +21,45 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     
+    - name: Cache pip packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -e ".[dev]"
     
-    - name: Run linting
+    - name: Lint with flake8
       run: |
-        # Run black
-        black --check .
-        # Run isort
-        isort --check-only .
-        # Run flake8
-        flake8 . --max-line-length=88 --extend-ignore=E203
+        flake8 agentic_community tests --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 agentic_community tests --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     
-    - name: Run tests
+    - name: Format check with black
+      run: |
+        black --check agentic_community tests
+    
+    - name: Sort imports with isort
+      run: |
+        isort --check-only agentic_community tests
+    
+    - name: Type check with mypy
+      run: |
+        mypy agentic_community || true  # Allow failures for now
+    
+    - name: Test with pytest
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
-        pytest -v --cov=agentic_community --cov-report=xml
+        pytest tests/ -v --cov=agentic_community --cov-report=xml --cov-report=html
     
-    - name: Upload coverage to Codecov
+    - name: Upload coverage reports
       uses: codecov/codecov-action@v3
+      if: matrix.python-version == '3.11'
       with:
         file: ./coverage.xml
         flags: unittests
@@ -51,6 +68,7 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     steps:
     - uses: actions/checkout@v3
@@ -58,9 +76,9 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: "3.11"
+        python-version: '3.11'
     
-    - name: Install build tools
+    - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
         pip install build twine
@@ -79,10 +97,10 @@ jobs:
         name: dist
         path: dist/
 
-  release:
+  publish:
     needs: build
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && contains(github.event.head_commit.message, '[release]')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     
     steps:
     - uses: actions/checkout@v3
@@ -92,16 +110,6 @@ jobs:
       with:
         name: dist
         path: dist/
-    
-    - name: Create Release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: v${{ github.run_number }}
-        release_name: Release v${{ github.run_number }}
-        draft: false
-        prerelease: false
     
     - name: Publish to PyPI
       env:
